lật bài: thêm thẻ

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Trò lật thẻ</title>
 </head>
 <body>
-    <h2>🎮 Memory Game</h2>
+    <h2>Chơi ngay khi còn ấm</h2>
     <div class="container">
         <div class="game-box">
             <div class="stats">
                 <p>Điểm: <span id="score">0</span></p>
                 <p>Lượt: <span id="moves">0</span></p>
                 <p>Thời gian: <span id="time">0s</span></p>
-                <button id="resetBtn">Reset</button>
+                <button id="resetBtn">Chơi lại</button>
             </div>
             <div id="game"></div>
         </div>
